# rust_nrtrace

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
arch/: Cargo.toml  build.rs
arch/src/: lib.rs  sys_uni.rs  types.rs
cfg/: dump_header.sh  dump_macro.sh  dump_nr.sh  syscall_list  types
cfg/aarch64/: NR
cfg/arm/: NR
cfg/header/: stat_newfstatat.inc
cfg/uni_header/: madvise.inc  mmap.inc  stat_newfstatat_flag.inc
cfg/x86/: NR
cfg/x86_64/: NR
cfg/x86_64/header/: stat_newfstatat.inc
peek/: Cargo.toml
peek/src/: lib.rs  peek_const.inc
printer/: Cargo.toml
printer/src/: config.inc.rs  config.rs  dirent.rs  epoll.rs  errno.rs  ioctl.rs  iovec.rs  lib.rs  logger.rs  madvise.rs  mmap.rs  number.rs  open.rs  poll.rs  rlimit.rs  sockaddr.rs  socket.rs  stat.rs  statfs.rs  sys.rs  time.rs  uname.rs
printer/src/ioctl/: termios.rs
src/: lib.rs  main.rs  tracer.rs
src/tracer/: history.rs
types/: build.rs
types/src/: lib.rs  types.rs
waiter/: Cargo.toml
waiter/src/: lib.rs
