[package]
name = "nrtrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "types" }
peek = { path = "peek" }
arch = { path = "arch" }
printer = { path = "printer" }

[profile.release]
lto = true
